--- a/ClothBazar.Web/Views/Product/Index.cshtml
+++ b/ClothBazar.Web/Views/Product/Index.cshtml
@@ -2,12 +2,17 @@
 @{
     ViewBag.Title = "Index";
 }
-<div id="tableContainer">
-    @{
-        Html.RenderAction("ProductTable");
-    }
+<div class="container">
+    <div id="tableContainer">
+        @{
+            Html.RenderAction("ProductTable");
+        }
 
-</div>
-<div id="actionTable">
+
+    </div>
+
+    <hr/>
+    <div id="actionTable">
     
+    </div>
 </div>
