--- a/ClothBazar.Web/Views/Category/Create.cshtml
+++ b/ClothBazar.Web/Views/Category/Create.cshtml
@@ -12,7 +12,52 @@
     <br/>
     <label>Description</label>
     <input name="Description"/>
+    <br />
+    <label>Image</label>
+    <input id="ImageURL"name="ImageURL"type="hidden"/>
+    <input id="imageUpload" name="Image" type="file"accept=".png,.jpg" />
+    <img class="img-thumbnail img-fluid" id="categoryImage" />
+    <br/>
+    <label>Is Featured ?</label>
+    <input name="isFeatured"type="radio"value="True"/>True
+    <input name="isFeatured" type="radio" value="False" />False
+    <br/>
 
     <button type="submit">Save</button>
 
 </form>
+<script>
+    $("#imageUpload").change(function () {
+        var element = this;
+
+        var formData = new FormData();
+
+        var totalFiles = element.files.length;
+
+        for (var i = 0; i < totalFiles; i++) {
+            var file = element.files[i];
+            formData.append("Photo", file);
+        }
+
+        $.ajax({
+                type: 'POST',
+                url: '@Url.Action("UploadImage", "Shared")',
+                dataType: 'json',
+                data: formData,
+                contentType: false,
+                processData: false
+            })
+            .done(function (response) {
+                console.log(response);
+
+                if (response.Success) {
+                    $("#ImageURL").val(response.ImageURL);
+                    $("#categoryImage").attr("src", response.ImageURL);
+                }
+            })
+            .fail(function (XMLHttpRequest, textStatus, errorThrown) {
+                alert("FAIL");
+            });
+    });
+
+</script>
