--- a/ClothBazar.Web/Views/Product/ProductTable.cshtml
+++ b/ClothBazar.Web/Views/Product/ProductTable.cshtml
@@ -6,14 +6,18 @@
 
 <div>
     <form method="post">
+        <input id="searchTxt"  placeholder="Search.." name="Search">
+        <button type="button" id="searchBtn"><i class="fa fa-search"></i></button>
+    </form>
+    @*<form method="post">
         <input id="searchTxt" name="Search"/>
         <button type="button"id="searchBtn">Search</button>
-    </form>
+    </form>*@
     <button type="button"id="newBtn">New</button>
 </div>
 
 <div id="tableContainer">
-    <table>
+    <table class="table table-striped">
         <thead>
         <tr>
             <td>Product Name</td>
@@ -27,7 +31,17 @@
         {
             <tr>
                 <td>@product.Name</td>
-                <td></td>
+                <td>
+                    @if (product.Category != null)
+                    {
+                        <text>@product.Category.Name</text>
+                    }
+                    else
+                    {
+                        <text>-</text>
+                    }
+
+                </td>
                 <td>@product.Price</td>
                 <td>
                     <button class="editBtn" data-id="@product.ID">Edit</button>
