--- a/ClothBazar.Web/Views/Product/Edit.cshtml
+++ b/ClothBazar.Web/Views/Product/Edit.cshtml
@@ -1,43 +1,105 @@
-﻿@model Product
+﻿@model EditProductViewModel
 
 @{
     ViewBag.Title = "Edit";
+    var imageURL = !string.IsNullOrEmpty(Model.ImageURL) ? Model.ImageURL : "/Content/images/system/placeholder-image.png";
+
 }
 
 
 
-<form id="editTable">
+<form id="editProduct">
+
     <h2>Edit product</h2>
-    <input name="ID"value="@Model.ID" type="hidden"/>
+    <div class="row">
+            <div class="col-md-8">
+                    <input name="ID"value="@Model.ID" type="hidden"/>
 
-    <label>Name</label>
-    <input name="Name" value="@Model.Name" />
-    <br />
-    <label>Description</label>
-    <input name="Description"value="@Model.Description" />
-    <br />
-    <label>Price</label>
-    <input name="Price"value="@Model.Price" />
+                    <label>Category</label>
+                    <select class="form-control" name="CategoryID">
+                        @foreach (var category in Model.AvailableCategories)
+                        {
+                            var selected = category.ID == Model.CategoryID ? "selected" : string.Empty;
+                            <option value="@category.ID" @selected>@category.Name</option>
+                        }
+                    </select>
 
-    <button id="updateBtn" type="button">Update</button>
+                    <label>Name</label>
+                    <input name="Name" value="@Model.Name"/>
+                    <br/>
+                    <label>Description</label>
+                    <input name="Description"value="@Model.Description"/>
+                    <br/>
+                    <label>Price</label>
+                    <input name="Price"value="@Model.Price"/>
+                    <br />
+                    <label>Image</label>
+                    <input id="ImageURL" name="ImageURL" type="hidden" />
+                    <input id="imageUpload" name="Image" type="file" accept=".png,.jpg" />
+                    <br/>
+                    <button id="updateBtn" type="button">Update</button>
+                    <button id="cancelBtn" type="button" class="btn btn-primary">Cancel</button>
+            </div>
+        <div class="col-md-4">
+            <div class="thumb">
+                <img class="img-thumbnail img-fluid" src="@imageURL" id="categoryImage"value="@Model.ImageURL" />
+            </div>
+        </div>
+        
+    </div>
+
+   
 
 </form>
 <script>
+    $("#imageUpload").change(function () {
+        var element = this;
+        var formData = new FormData();
+        var totalFiles = element.files.length;
+        for (var i = 0; i < totalFiles; i++) {
+            var file = element.files[i];
+            formData.append("Photo", file);
+        }
+        $.ajax({
+                type: 'POST',
+                url: '@Url.Action("UploadImage", "Shared")',
+                dataType: 'json',
+                data: formData,
+                contentType: false,
+                processData: false
+            })
+            .done(function (response) {
+                console.log(response);
+                if (response.Success) {
+                    $("#ImageURL").val(response.ImageURL);
+                    $("#productImage").attr("src", response.ImageURL);
+                }
+            })
+            .fail(function (XMLHttpRequest, textStatus, errorThrown) {
+                alert("FAIL");
+            });
+    });
+
     $("#updateBtn").click(function () {
 
         $.ajax({
                 type:"POST",
-                url: 'Product/edit',
-                data: $("#editTable").serialize()
+                url: '@Url.Action("Edit", "Product")',
+                data: $("#editProduct").serialize()
 
             })
             .done(function (response) {
                 $("#tableContainer").html(response),
-                    $("#createTable").html("");
+                    $("#actionTable").html("");
+                focusAction("tableContiner");
             })
             .fail(function (xmlHttpRequest, textStatus, errorThrown) {
                 alert("Fail");
             });
 
+    });
+    $("#cancelBtn").click(function () {
+        $("#actionTable").html("");
+        focusAction("tableContiner");
     });
 </script>
