--- a/ClothBazar.Web/Views/Product/ProductTable.cshtml
+++ b/ClothBazar.Web/Views/Product/ProductTable.cshtml
@@ -1,87 +1,137 @@
-﻿@model List<Product>
+﻿@model ProductSearchViewModel
 @{
     ViewBag.Title = "ProductTable";
 }
-
+<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
+<script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
 
 <div>
     <form method="post">
-        <input id="searchTxt"  placeholder="Search.." name="Search">
+        <input id="searchTxt" placeholder="Search.." name="Search">
         <button type="button" id="searchBtn"><i class="fa fa-search"></i></button>
     </form>
     @*<form method="post">
-        <input id="searchTxt" name="Search"/>
-        <button type="button"id="searchBtn">Search</button>
-    </form>*@
-    <button type="button"id="newBtn">New</button>
+            <input id="searchTxt" name="Search"/>
+            <button type="button"id="searchBtn">Search</button>
+        </form>*@
+    <button type="button" id="newBtn">New</button>
+    <button type="button" id="resetBtn">Reset</button>
 </div>
 
-<div id="tableContainer">
-    <table class="table table-striped">
+<div>
+    <table  id="ProductsTable" class="table table-striped">
         <thead>
         <tr>
             <td>Product Name</td>
             <td>Category</td>
             <td>Price</td>
-            <td>Actions</td>
+            <td class="wrap-td">Actions</td>
         </tr>
         </thead>
         <tbody>
-        @foreach (var product in Model)
+        @if (Model.Products != null && Model.Products.Count > 0)
+        {
+            foreach (var product in Model.Products)
+            {
+                <tr>
+                    <td>@product.Name</td>
+                    <td>
+                        @if (product.Category != null)
+                        {
+                            <text>@product.Category.Name</text>
+                        }
+                        else
+                        {
+                            <text>-</text>
+                        }
+                    </td>
+                    <td>@product.Price</td>
+                    <td class="wrap-td">
+                        <button class="editBtn" data-id="@product.ID">Edit</button>
+                        <button class="deleteBtn" data-id="@product.ID">Delete</button>
+                        <button class="addtoCart" data-id="@product.ID">Add To Cart</button>
+                    </td>
+                </tr>
+            }
+        }
+        else
         {
             <tr>
-                <td>@product.Name</td>
-                <td>
-                    @if (product.Category != null)
-                    {
-                        <text>@product.Category.Name</text>
-                    }
-                    else
-                    {
-                        <text>-</text>
-                    }
-
-                </td>
-                <td>@product.Price</td>
-                <td>
-                    <button class="editBtn" data-id="@product.ID">Edit</button>
-                    <button class="deleteBtn"data-id="@product.ID">Delete</button>
-                </td>
+                <td class="text-danger" colspan="4">No Products found.</td>
             </tr>
         }
-
         </tbody>
     </table>
-</div>
+    <div>
+        @*@if (Model.PageNo != 1)
+		{
+			<button class="pageButtons" data-pageNo="@(Model.PageNo - 1)">Previous</button>
+		}
 
+		<button class="pageButtons" data-pageNo="@(Model.PageNo + 1)">Next</button>*@
+    </div>
+</div>
 <script>
+    $('#ProductsTable').DataTable();
+
+    $(".pageButtons").click(function () {
+        $.ajax({
+            url: '@Url.Action("ProductTable", "Product")',
+                data: {
+                    pageNo: $(this).attr("data-pageNo")
+                }
+            })
+            .done(function (response) {
+                $("#tableContiner").html(response);
+            })
+            .fail(function (XMLHttpRequest, textStatus, errorThrown) {
+                alert("FAIL");
+            });
+    });
     $("#searchBtn").click(function () {
         var searchValue = $("#searchTxt").val();
         $.ajax({
-                url: 'Product/ProductTable',
+                url: '@Url.Action("ProductTable", "Product")',
                 data: {
                     search: searchValue
                 }
 
             })
-            .done(function(response) {
+            .done(function (response) {
                 $("#tableContainer").html(response);
             })
-            .fail(function(xmlHttpRequest, textStatus, errorThrown) {
+            .fail(function (xmlHttpRequest, textStatus, errorThrown) {
                 alert("Fail");
             });
 
     });
-    $("#newBtn").click(function () {
-        
-        $.ajax({
-               
-                url: 'Product/create'
-                
+    $("#resetBtn").click(function () {
+        var searchValue = '';
 
-                })
+        $.ajax({
+                url: '@Url.Action("ProductTable", "Product")',
+                data: {
+                    search: searchValue
+                }
+            })
+            .done(function (response) {
+                $("#tableContiner").html(response);
+            })
+            .fail(function (XMLHttpRequest, textStatus, errorThrown) {
+                alert("FAIL");
+            });
+    });
+    $("#newBtn").click(function () {
+
+        $.ajax({
+
+                url: '@Url.Action("Create", "Product")'
+
+
+            })
             .done(function (response) {
                 $("#actionTable").html(response);
+                focusAction("actionTable");
             })
             .fail(function (xmlHttpRequest, textStatus, errorThrown) {
                 alert("Fail");
@@ -89,16 +139,17 @@
 
     });
     $(".editBtn").click(function () {
-        
+
         $.ajax({
-                url: 'Product/edit',
+                url: '@Url.Action("Edit", "Product")',
                 data: {
-                    Id:$(this).attr('data-ID')
+                    Id: $(this).attr('data-ID')
                 }
 
             })
             .done(function (response) {
                 $("#actionTable").html(response);
+                focusAction("actionTable");
             })
             .fail(function (xmlHttpRequest, textStatus, errorThrown) {
                 alert("Fail");
@@ -106,24 +157,49 @@
 
     });
     $(".deleteBtn").click(function () {
-        var confirmDelete = confirm("Do your want to delete the data ?");
-        if (confirmDelete) {
-            $.ajax({
-                    type:"POST",
-                    url: 'Product/delete',
-                    data: {
-                        Id: $(this).attr('data-ID')
-                    }
 
-                })
-                .done(function (response) {
-                    $("#tableContainer").html(response);
-                })
-                .fail(function (xmlHttpRequest, textStatus, errorThrown) {
-                    alert("Fail");
-                });
-        }
-        
+        Swal.fire({
+                title: 'Confirm',
+                text: "Do your want to delete the data",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, delete it!'
+            })
+            .then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                            type: "POST",
+                            url: '@Url.Action("Delete", "Product")',
+                            data: {
+                                Id: $(this).attr('data-ID')
+                            }
 
+                        })
+                        .done(function (response) {
+                            $("#tableContainer").html(response);
+                            Swal.fire(
+                                'Deleted!',
+                                'Your file has been deleted.',
+                                'success'
+                            )
+                        })
+                        .fail(function (xmlHttpRequest, textStatus, errorThrown) {
+                            alert("Fail");
+                        });
+
+
+                }
+            })
+    });
+
+    var products = [];
+    $(".add-to-cart").click(function () {
+        var productID = $(this).attr('data-ID');
+
+        products.push(productID);
+        $.cookie('CartProducts', products.join("-"), { expires: 7, path: '/' });
+        alert("cookieValue");
     });
 </script>
