--- a/ClothBazar.Web/Views/Shared/_Layout.cshtml
+++ b/ClothBazar.Web/Views/Shared/_Layout.cshtml
@@ -174,7 +174,7 @@
                         </div>
                     </form>
                     <ul class="flat-social">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="@ConfigurationsService.Instance.GetConfig("FacebookURL").Value"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fa fa-google"></i></a></li>
                         <li><a href="#"><i class="fa fa-behance"></i></a></li>
@@ -225,8 +225,8 @@
                         <a href="index.html"><img src="~/Content/images/logo@2x.png" alt="image" width="107" height="24"></a>
                     </div>
                     <ul class="flat-contact">
-                        <li class="address">112 Kingdom, NA 12, New York</li>
-                        <li class="phone">+12 345 678 910</li>
+                        <li class="address">@ConfigurationsService.Instance.GetConfig("CompanyAddress").Value</li>
+                        <li class="phone">@ConfigurationsService.Instance.GetConfig("CompanyPhone").Value</li>
                         <li class="email">infor.deercreative@gmail.com</li>
                     </ul><!-- /.flat-contact -->
                 </div><!-- /.widget -->
@@ -289,6 +289,8 @@
     <script src="~/Content/rev-slider/js/extensions/revolution.extension.parallax.min.js"></script>
     <script src="~/Content/rev-slider/js/extensions/revolution.extension.slideanims.min.js"></script>
     <script src="~/Content/rev-slider/js/extensions/revolution.extension.video.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
 </body>
 </html>
