--- a/ClothBazar.Web/Views/Category/CategoryTable.cshtml
+++ b/ClothBazar.Web/Views/Category/CategoryTable.cshtml
@@ -15,42 +15,79 @@
             <button type="button"id="searchBtn">Search</button>
         </form>*@
     <button type="button" id="newBtn">New</button>
-    <button type="resetBtn" id="newBtn">Reset</button>
+    <button type="button" id="resetBtn">Reset</button>
 </div>
 <div id="tableContainer">
     <table class="table table-striped">
         <thead>
-            <tr>
-                <th>Category Name</th>
-                <th>Products</th>
-                <th>Actions</th>
+        <tr>
+            <th>Category Name</th>
+            <th>Products</th>
+            <th>Actions</th>
 
-            </tr>
+        </tr>
         </thead>
         <tbody>
-            @if (Model.Categories != null && Model.Categories.Count > 0)
+        @if (Model.Categories != null && Model.Categories.Count > 0)
+        {
+            foreach (var category in Model.Categories)
             {
-                foreach (var category in Model.Categories)
-                {
-                    <tr>
-                        <td>@category.Name</td>
-                        <td>
-                            @category.Products.Count
-                        </td>
+                <tr>
+                    <td>@category.Name</td>
+                    <td>
+                        @category.Products.Count
+                    </td>
 
-                        <td>
-                            <button class="editBtn" data-id="@category.ID">Edit</button>
-                            <button class="deleteBtn" data-id="@category.ID">Delete</button>
-                        </td>
-                    </tr>
-                }
+                    <td>
+                        <button class="editBtn" data-id="@category.ID">Edit</button>
+                        <button class="deleteBtn" data-id="@category.ID">Delete</button>
+                    </td>
+                </tr>
             }
+        }
         </tbody>
     </table>
+    <div>
+        @if (Model.Pager != null)
+        {
+
+            if (Model.Pager.CurrentPage > 1)
+            {
+                <button class="pageButtons" data-pageno="1">First</button>
+                <button class="pageButtons" data-pageno="@(Model.Pager.CurrentPage - 1)">Previous</button>
+            }
+
+            for (var page = Model.Pager.StartPage; page <= Model.Pager.EndPage; page++)
+            {
+                string activeClass = Model.Pager.CurrentPage == page ? "active bg-info" : string.Empty;
+
+                <button class="@activeClass pageButtons" data-pageno="@page">@page</button>
+            }
+
+            if (Model.Pager.CurrentPage < Model.Pager.TotalPages)
+            {
+                <button class="pageButtons" data-pageno="@(Model.Pager.CurrentPage + 1)">Next</button>
+                <button class="pageButtons" data-pageno="@Model.Pager.EndPage">Last</button>
+            }			
+        }
+    </div>
 </div>
 
 <script>
-
+    $(".pageButtons").click(function () {
+        $.ajax({
+                url: '@Url.Action("CategoryTable", "Category")',
+                data: {
+                    pageNo: $(this).attr("data-pageNo")
+                }
+            })
+            .done(function (response) {
+                $("#tableContainer").html(response);
+            })
+            .fail(function (XMLHttpRequest, textStatus, errorThrown) {
+                alert("FAIL");
+            });
+    });
     $("#searchBtn").click(function () {
         var searchValue = $("#searchTxt").val();
 
@@ -76,7 +113,7 @@
                 }
             })
             .done(function (response) {
-                $("#tableContiner").html(response);
+                $("#tableContainer").html(response);
             })
             .fail(function (XMLHttpRequest, textStatus, errorThrown) {
                 alert("FAIL");
