--- a/ClothBazar.Web/Views/Product/ProductTable.cshtml
+++ b/ClothBazar.Web/Views/Product/ProductTable.cshtml
@@ -1,24 +1,23 @@
-﻿@model ProductSearchViewModel
+﻿@model ClothBazar.Web.ViewModels.ProductSearchViewModel
 @{
     ViewBag.Title = "ProductTable";
 }
-<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
-<script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
 
 <div>
     <form method="post">
         <input id="searchTxt" placeholder="Search.." name="Search">
         <button type="button" id="searchBtn"><i class="fa fa-search"></i></button>
-    </form>
+   
     @*<form method="post">
             <input id="searchTxt" name="Search"/>
             <button type="button"id="searchBtn">Search</button>
         </form>*@
     <button type="button" id="newBtn">New</button>
-    <button type="button" id="resetBtn">Reset</button>
+    <button  type="button" id="resetBtn">Reset</button>
+    </form>
 </div>
 
-<div>
+<div id="tableContainer">
     <table  id="ProductsTable" class="table table-striped">
         <thead>
         <tr>
@@ -58,21 +57,40 @@
         {
             <tr>
                 <td class="text-danger" colspan="4">No Products found.</td>
+               
+               
+    
             </tr>
         }
         </tbody>
     </table>
     <div>
-        @*@if (Model.PageNo != 1)
-		{
-			<button class="pageButtons" data-pageNo="@(Model.PageNo - 1)">Previous</button>
-		}
+        @if (Model.Pager != null)
+        {
 
-		<button class="pageButtons" data-pageNo="@(Model.PageNo + 1)">Next</button>*@
+            if (Model.Pager.CurrentPage > 1)
+            {
+                <button class="pageButtons" data-pageno="1">First</button>
+                <button class="pageButtons" data-pageno="@(Model.Pager.CurrentPage - 1)">Previous</button>
+            }
+
+            for (var page = Model.Pager.StartPage; page <= Model.Pager.EndPage; page++)
+            {
+                string activeClass = Model.Pager.CurrentPage == page ? "active bg-info" : string.Empty;
+
+                <button class="@activeClass pageButtons" data-pageno="@page">@page</button>
+            }
+
+            if (Model.Pager.CurrentPage < Model.Pager.TotalPages)
+            {
+                <button class="pageButtons" data-pageno="@(Model.Pager.CurrentPage + 1)">Next</button>
+                <button class="pageButtons" data-pageno="@Model.Pager.EndPage">Last</button>
+            }			
+        }
     </div>
 </div>
 <script>
-    $('#ProductsTable').DataTable();
+    
 
     $(".pageButtons").click(function () {
         $.ajax({
@@ -82,7 +100,7 @@
                 }
             })
             .done(function (response) {
-                $("#tableContiner").html(response);
+                $("#tableContainer").html(response);
             })
             .fail(function (XMLHttpRequest, textStatus, errorThrown) {
                 alert("FAIL");
@@ -105,6 +123,7 @@
             });
 
     });
+    
     $("#resetBtn").click(function () {
         var searchValue = '';
 
@@ -115,7 +134,7 @@
                 }
             })
             .done(function (response) {
-                $("#tableContiner").html(response);
+                $("#tableContainer").html(response);
             })
             .fail(function (XMLHttpRequest, textStatus, errorThrown) {
                 alert("FAIL");
