--- a/ClothBazar.Web/Views/Product/Create.cshtml
+++ b/ClothBazar.Web/Views/Product/Create.cshtml
@@ -50,6 +50,36 @@
 </form>
 
 <script>
+    $('#createProduct').validate({
+        rules: {
+            Name: {
+                required: true,
+                minlength: 5,
+                maxlength: 50,
+            },
+            Description: {
+                maxlength: 500
+            },
+            Price: {
+                range: [1, 100000]
+            }
+        },
+        messages: {
+            Name: {
+                required: 'Name is required',
+                minlength: 'Minimum Length is 5',
+                maxlength: 'Maximum Length is 50'
+            },
+            Description: {
+                maxlength: 'Maximum Length is 500'
+            },
+            Price: {
+                range: 'Price must be within range of 1 - 100000.'
+            }
+        }
+    });
+
+
     $("#imageUpload").change(function () {
         var element = this;
         var formData = new FormData();
@@ -66,22 +96,23 @@
                 contentType: false,
                 processData: false
             })
-            .done(function (response) {
+            .done(function(response) {
                 console.log(response);
                 if (response.Success) {
                     $("#ImageURL").val(response.ImageURL);
                     $("#productImage").attr("src", response.ImageURL);
                 }
             })
-            .fail(function (XMLHttpRequest, textStatus, errorThrown) {
+            .fail(function(XMLHttpRequest, textStatus, errorThrown) {
                 alert("FAIL");
             });
     });
-    $("#saveBtn").click(function () {
-
-        $.ajax({
-                type:"POST",
-                url: '@Url.Action("Create", "Product")',
+    $("#saveBtn").click(function() {
+        if ($("#createProduct").valid())
+        {
+            $.ajax({
+                    type: "POST",
+                    url: '@Url.Action("Create", "Product")',
                 data: $("#createProduct").serialize()
 
             })
@@ -93,8 +124,18 @@
             .fail(function (xmlHttpRequest, textStatus, errorThrown) {
                 alert("Fail");
             });
+        }
+        else {
+            swal({
+                title: "Warning",
+                text: "Please enter all valid data in fields.",
+                icon: "warning",
+                buttons: true,
+                dangerMode: true,
+            });
+        }
+        });
 
-    });
     $("#cancelBtn").click(function () {
         $("#actionTable").html("");
         focusAction("tableContainer");
