--- a/ClothBazar.Web/Views/Product/Edit.cshtml
+++ b/ClothBazar.Web/Views/Product/Edit.cshtml
@@ -52,6 +52,35 @@
 
 </form>
 <script>
+    $('#editProduct').validate({
+        rules: {
+            Name: {
+                required: true,
+                minlength: 5,
+                maxlength: 50,
+            },
+            Description: {
+                maxlength: 500
+            },
+            Price: {
+                range: [1, 100000]
+            }
+        },
+        messages: {
+            Name: {
+                required: 'Name is required',
+                minlength: 'Minimum Length is 5',
+                maxlength: 'Maximum Length is 50'
+            },
+            Description: {
+                maxlength: 'Maximum Length is 500'
+            },
+            Price: {
+                range: 'Price must be within range of 1 - 100000.'
+            }
+        }
+    });
+
     $("#imageUpload").change(function () {
         var element = this;
         var formData = new FormData();
@@ -68,23 +97,24 @@
                 contentType: false,
                 processData: false
             })
-            .done(function (response) {
+            .done(function(response) {
                 console.log(response);
                 if (response.Success) {
                     $("#ImageURL").val(response.ImageURL);
                     $("#productImage").attr("src", response.ImageURL);
                 }
             })
-            .fail(function (XMLHttpRequest, textStatus, errorThrown) {
+            .fail(function(XMLHttpRequest, textStatus, errorThrown) {
                 alert("FAIL");
             });
     });
 
-    $("#updateBtn").click(function () {
-
-        $.ajax({
-                type:"POST",
-                url: '@Url.Action("Edit", "Product")',
+    $("#updateBtn").click(function() {
+        if ($("#editProduct").valid())
+        {
+            $.ajax({
+                    type: "POST",
+                    url: '@Url.Action("Edit", "Product")',
                 data: $("#editProduct").serialize()
 
             })
@@ -96,6 +126,16 @@
             .fail(function (xmlHttpRequest, textStatus, errorThrown) {
                 alert("Fail");
             });
+        }
+        else {
+            swal({
+                title: "Warning",
+                text: "Please enter all valid data in fields.",
+                icon: "warning",
+                buttons: true,
+                dangerMode: true,
+            });
+        }
 
     });
     $("#cancelBtn").click(function () {
